policies/test-app-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-app-policy
  namespace: default
spec:
  egress:
  - ports:
    - port: 22
      protocol: TCP
    - port: 3389
      protocol: TCP
    - port: 80
      protocol: TCP
    - port: 443
      protocol: TCP
    - port: 8080
      protocol: TCP
    - port: 5432
      protocol: TCP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
  podSelector:
    matchLabels:
      app: test-app
  policyTypes:
  - Egress
